<resources>
    <string name="app_name">PhotoMap</string>
    <string name="sign_in">Sign In</string>
    <string name="title_back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_holder">TabHolderActivity</string>
    <string name="title_map">Map</string>
    <string name="title_photo_list">Photo List</string>
    <string name="title_notifications">Notifications</string>
    <string name="photo_list_image_description">Photo List Image</string>
    <string name="title">Title</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="list_category">Category</string>

</resources>
